# long-asr

./: .gitignore  README.md  pyproject.toml
dataset/: sc_speech.csv
notebooks/: README.md  collect_data.ipynb  upload_dataset.ipynb  whisper_inference.ipynb  whisper_tuning.ipynb
